name: punkt
version: 0.1.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              bryant
maintainer:          bryant@defrag.in
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
    exposed-modules: NLP.Punkt
    other-modules: NLP.Punkt.Match

    build-depends:
        base,
        mtl,
        containers,
        array,
        text,
        regex-tdfa,
        regex-tdfa-text

    hs-source-dirs: lib
    default-language: Haskell2010
