name: punkt
version: 0.1.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              bryant
maintainer:          bryant@defrag.in
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
    exposed-modules: NLP.Punkt, NLP.Punkt.Match

    build-depends:
        base,
        mtl,
        unordered-containers,
        array,
        text,
        regex-tdfa,
        regex-tdfa-text

    hs-source-dirs: lib
    default-language: Haskell2010

test-suite punkt-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Main.hs

    build-depends:
        base,
        mtl,
        text,
        punkt,
        regex-tdfa,
        tasty,
        tasty-quickcheck,
        tasty-hunit

    default-language: Haskell2010
