name: punkt
version: 0.1.1
synopsis: Multilingual unsupervised sentence tokenization with Punkt.
description: Multilingual unsupervised sentence tokenization with Punkt.
license: MIT
license-file:        LICENSE
author:              bryant
maintainer:          bryant@nfkb
category: Natural Language Processing, Text
build-type:          Simple
cabal-version:       >=1.10
homepage: https://github.com/bryant/punkt

library
    exposed-modules: NLP.Punkt, NLP.Punkt.Match

    build-depends:
        base >= 4 && < 5,
        mtl,
        unordered-containers,
        array,
        text,
        regex-tdfa,
        regex-tdfa-text

    hs-source-dirs: lib
    default-language: Haskell2010

    ghc-options: -O3 -Wall

test-suite punkt-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Main.hs

    build-depends:
        base >= 4 && < 5,
        mtl,
        text,
        punkt,
        regex-tdfa,
        tasty,
        tasty-quickcheck,
        tasty-hunit

    default-language: Haskell2010
